--- a/01-snake/package.json
+++ b/01-snake/package.json
@@ -14,8 +14,8 @@
     "@types/jest": "^24.0.18",
     "jest": "^24.9.0",
     "parcel-bundler": "^1.12.3",
-    "typescript": "^3.6.2",
     "prettier": "1.18.2",
-    "ts-jest": "^24.0.2"
+    "ts-jest": "^24.0.2",
+    "typescript": "^3.6.2"
   }
 }
