--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,7 @@
 vscode:
   extensions:
     - esbenp.prettier-vscode
+    - dracula-theme.theme-dracula
 ports:
   - port: 1234
     onOpen: open-browser
