--- a/02-minesweeper/package.json
+++ b/02-minesweeper/package.json
@@ -2,7 +2,6 @@
   "name": "codelex-minesweeper",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "start": "parcel ./static/index.html",
     "test": "jest --env=node --colors test --watch",
@@ -11,12 +10,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^24.0.18",
-    "jest": "^24.9.0",
-    "parcel-bundler": "^1.12.3",
-    "prettier": "1.18.2",
-    "sass": "^1.23.0",
-    "ts-jest": "^24.0.2",
-    "typescript": "^3.6.2"
+    "@parcel/transformer-sass": "^2.7.0",
+    "@types/jest": "^28.1.6",
+    "jest": "^28.1.3",
+    "parcel": "^2.7.0",
+    "prettier": "2.7.1",
+    "sass": "^1.54.4",
+    "ts-jest": "^28.0.7",
+    "typescript": "^4.7.4"
   }
 }
